# convergio-night-agents

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-night-agents/: Cargo.toml
crates/convergio-night-agents/src/: auto_config.rs  ci_optimizer.rs  ci_optimizer_tests.rs  drift_detection.rs  ext.rs  inference_bridge.rs  knowledge.rs  knowledge_helpers.rs  lib.rs  mcp_defs.rs  memory_lint.rs  memory_lint_checks.rs  memory_lint_rules.rs  memory_lint_types.rs  routes.rs  routes_memory_lint.rs  routes_projects.rs  routes_routing.rs  routes_runs.rs  runner.rs  schema.rs  smart_spawner.rs  spawner.rs  types.rs
crates/convergio-night-agents/tests/: e2e_agent_defs.rs  e2e_health.rs  e2e_helpers.rs  e2e_memory_lint.rs  e2e_projects.rs  e2e_routing.rs  e2e_runs.rs  mlx_classification_routing.rs  mlx_fallback_budget.rs
crates/convergio-night-agents/tests/routing/: mod.rs
docs/adr/: 001-extraction.md  003-audit-security-fixes.md  ADR-025-night-agent-smart-routing.md
