[workspace]
resolver = "2"
members = ["crates/convergio-night-agents"]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-night-agents"

[workspace.dependencies]
# SDK
convergio-types = "0.1"
convergio-db = "0.1"
convergio-telemetry = "0.1"

# External GH dep (for dev-dependencies only)
# TODO: uncomment when convergio-inference repo is published on GitHub
# convergio-inference = { git = "https://github.com/Roberdan/convergio-inference", tag = "v0.1.0" }

# Common deps
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
hostname = "0.4"
dirs = "6"
