[package]
name = "convergio-night-agents"
description = "Night agents — scheduled autonomous agents running during off-peak hours"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-night-agents"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
hostname = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }

[features]
# Enable when convergio-inference repo is published on GitHub
inference = []

[dev-dependencies]
# TODO: uncomment when convergio-inference repo is published on GitHub
# convergio-inference = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
